# RealTimeRendering

./: .gitignore  CMakeLists.txt
include/: cube.h  directional_light.h  object.h  phong_mat.h  plane.h  point_light.h  render_target.h  scene.h  shader_loader.h  vertex.h
include/shaders/: shader.h  shader_data.h  shader_handler.h
shaders/: flat.fs  flat.fshader  flat.vs  flat.vshader  passThrough.fs  passThrough.fshader  passThrough.vs  passThrough.vshader  shadowMap.fs  shadowMap.vs  textureRenderer.fs  textureRenderer.vs
src/: cube.cpp  directional_light.cpp  main.cpp  object.cpp  phong_mat.cpp  plane.cpp  point_light.cpp  render_target.cpp  shader_loader.cpp
src/shaders/: shader.cpp  shader_data.cpp  shader_handle.cpp
